--- a/src/App.css
+++ b/src/App.css
@@ -200,13 +200,12 @@
 
 * {
     font-family: "Poppins";
+    text-decoration-color: #ff8500 !important;
 }
 
 .app__wrapper {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between;
-    align-items: center; */
     min-height: 100vh;
     padding: 0px 80px;
 }
