--- a/src/components/EnfoqueSAS/EnfoqueSAS.css
+++ b/src/components/EnfoqueSAS/EnfoqueSAS.css
@@ -25,7 +25,7 @@
     font-weight: 700;
     margin-bottom: 50px;
     text-align: center;
-    color: rgb(240, 113, 68);
+    color: #ff8500;
 }
 
 .enfoqueSAS__section {
