--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -76,7 +76,8 @@
     border-radius: 400px;
     padding: 20px 40px;
     color: rgb(255, 255, 255);
-    background-color: coral;
+    background-color: #ff8500;
+    /* background-color: coral; */
     /* font-weight: 700; */
     margin-top: 25px;
     font-size: 20px;
