--- a/src/components/EnfoqueSAS/EnfoqueSAS.css
+++ b/src/components/EnfoqueSAS/EnfoqueSAS.css
@@ -42,7 +42,7 @@
     background-color: white;
     width: 48%;
     box-shadow: 0 15px 40px #00000011;
-    padding: 20px;
+    padding: 40px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
