--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -64,6 +64,7 @@
 .item_top {
     /* background-color: blueviolet; */
     width: 100%;
+    flex: 1;
     height: 78%;
     display: flex;
 }
@@ -76,6 +77,7 @@
     justify-content: space-evenly;
     padding: 5px 10px 10px 10px;
     gap: 10px;
+    max-height: 60px;
 }
 
 .social_item {
@@ -91,7 +93,9 @@
     align-items: center;
     justify-content: center;
     gap: 5px;
-
+    cursor: pointer;
+    outline: none;
+    border: none;
 }
 
 .item_top_img {
@@ -171,17 +175,18 @@
     }
 
     .aboutUs_container_item {
+        height: 300px;
         justify-self: center !important;
     }
 
     .aboutUs_container_informatica {
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(2, 250px);
+        grid-template-rows: repeat(2, 300px);
     }
     
     .aboutUs_container_artes {
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(3, 250px);
+        grid-template-rows: repeat(3, 300px);
     }
 }
 
@@ -217,6 +222,7 @@
         /* background-color: rgb(116, 116, 235); */
         width: 100%;
         height: 22%;
+        max-height: 60px;
     }
 
     .item_top_img {
