--- a/src/components/Patronicadores/Patrocinadores.css
+++ b/src/components/Patronicadores/Patrocinadores.css
@@ -2,7 +2,8 @@
     /* background-color: #E8DFCA; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 100px;
     align-items: center;
     padding: 0 80px;
     margin: 50px 0px 100px 0px;
@@ -10,6 +11,16 @@
     /* border-bottom: 1px solid rgb(208, 209, 167); */
 }
 
+.app__wrapper__patrocinadores a {
+    width: 180px;
+    display: flex;
+    justify-content: center;
+}
+
+.app__wrapper__patrocinadores .vic {
+    filter: brightness(0.1);
+
+} 
 .app__wrapper__patrocinadores img {
 
     /* margin: 25px 20px; */
